<resources>
    <string name="app_name">Food delivery by Esya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_for_everyone">Food for Everyone</string>
    <string name="get_started">Get started</string>
    <string name="delicious_food_for_you">Delicious\nfood for you</string>
    <string name="search">Search</string>
    <string name="found_0_results">Found 0 results</string>
    <string name="history">History</string>
    <string name="no_history_yet">No history yet</string>
    <string name="hit_the_orange_button">Hit the orange button down below to Create an order</string>
    <string name="start_ordering">Start ordering</string>
    <string name="orders">Orders</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="profile">Profile</string>
    <string name="no_profile_yet">No profile yet</string>
    <string name="hit_the_orange_button_profile">Hit the orange button down below to Create an profile</string>
</resources>